--- a/angular.json
+++ b/angular.json
@@ -50,6 +50,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -114,6 +115,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -143,8 +145,16 @@
               "devServerTarget": "offerbook:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
-  "defaultProject": "offerbook"
+    }
+  },
+  "defaultProject": "offerbook",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
