--- a/firebase.json
+++ b/firebase.json
@@ -74,6 +74,21 @@
           "destination": "/index.html"
         }
       ]
+    },
+    {
+      "target": "offerbook",
+      "public": "docs/",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
