--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/app/ui/styles/fonts.scss"
             ],
             "scripts": []
           },
